--- a/generic.html
+++ b/generic.html
@@ -92,7 +92,7 @@
 							</section>
 							<section>
 								<h3>郵件</h3>
-								<p><a href="#">415574650@qq.com</a></p>
+								<p><a href="#">xxxxxx@qq.com</a></p>
 							</section>
 							<section>
 								<h3>社交帳戶</h3>
