--- a/elements.html
+++ b/elements.html
@@ -464,7 +464,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 							</section>
 							<section>
 								<h3>郵件</h3>
-								<p><a href="#">415574650@qq.com</a></p>
+								<p><a href="#">xxxx@com.</a></p>
 							</section>
 							<section>
 								<h3>社交帳戶</h3>
